# adk-project-mcp

./: .env_sample  .gitignore  README.md  agent.py  main.py  pyproject.toml
allowed_dir/: 세션요약.txt
allowed_dir/reports/: final_report.md  reinforcement_learning_seminar.md  reinforcement_learning_summary.md
app/: __init__.py
app/.adk/: session.db
app/agent/: __init__.py  root.py  sub_agents.py  workflows.py
app/config/: settings.py
app/mcp/: __init__.py  toolsets.py
app/prompt/: __init__.py  instructions.py
app/services/: chat_cli.py  notion_oauth.py  runtime_logging.py
app/tool/: __init__.py  callbacks.py
